--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
+        "axios": "^1.3.4",
+        "laravel-vite-plugin": "^0.7.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "vite": "^4.2.1"
+    },
+    "dependencies": {
+        "@vitejs/plugin-react": "^3.1.0"
     }
 }
