--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "vite": "^4.2.1"
     },
     "dependencies": {
-        "@vitejs/plugin-react": "^3.1.0"
+        "@vitejs/plugin-react": "^3.1.0",
+        "sweetalert2": "^11.7.5"
     }
 }
