--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-react": "^3.1.0",
+        "react-router-dom": "^6.11.1",
         "sweetalert2": "^11.7.5"
     }
 }
